spacing fix

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ main {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	gap: 7rem;
+	gap: rem;
 	width: 90%;
 	margin: 0 auto;
 }
@@ -155,7 +155,7 @@ footer {
 	-ms-flex-pack: center;
 	justify-content: center;
 	gap: 1.5rem;
-	padding: 3rem 0 0 0;
+	padding: 8rem 0 0 0;
 }
 
 @media only screen and (min-width: 800px) {
